v2.2.0 (XXXX-XX-XX)
-------------------

* removed startup option `--random.no-seed`

  This option had no effect in previous versions of ArangoDB and was thus removed.

* removed startup option `--database.remove-on-drop`

* introduced write-ahead log

  All write operations in an ArangoDB server instance are automatically logged
  to the server's write-ahead log. The write-ahead log is a set of append-only 
  logfiles, and it is used in case of a crash recovery and for replication.
  Data from the write-ahead log will eventually be moved into the datafiles of
  collections, allowing the server to remove older write-ahead log logfiles.

  Cross-collection transactions in ArangoDB should benefit considerably by this
  change, as less writes than in previous versions is required to ensure the data 
  of multiple collections are atomcially and durably committed. All data-modifying 
  operations inside transactions (insert, update, remove) will write their 
  operations into the write-ahead log directly, making transactions with multiple 
  operations also require less physical memory than in previous versions of ArangoDB,
  where most parts of transactions were handled in RAM first.

  The data in the write-ahead log can also be used in the replication context.
  The `_replication` collection that was used in previous versions of ArangoDB to 
  store all changes on the server is not used anymore in ArangoDB 2.2. Instead, 
  slaves can read from a master's write-ahead log to get informed about most
  recent changes. This removes the need to store data-modifying operations in 
  both the actual place and the `_replication` collection. 

  Note: the replication from the write-ahead log is still in development.

* removed startup option `--server.disable-replication-logger`

  This option is superfluous in ArangoDB 2.2. There is no dedicated replication
  logger in ArangoDB 2.2. There is now always the write-ahead log, and it is also