@@ -1,6 +1,12 @@
 v2.2.0 (XXXX-XX-XX)
 -------------------
 
+* honor startup option `--server.disable-statistics` when deciding whether or not
+  to start periodic statistics collection jobs
+
+  Previously, the statistics collection jobs were started even if the server was
+  started with the `--server.disable-statistics` flag being set to `true`
+
 * removed startup option `--random.no-seed`
 
   This option had no effect in previous versions of ArangoDB and was thus removed.
